# pimonitor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix
.llm_history/: 2026-01-09_1136.md  2026-01-09_1548.md  2026-01-09_1606.md  2026-01-09_1627.md  2026-01-09_1936.md  2026-01-09_1945.md  2026-01-09_2002.md  2026-01-09_2014.md  2026-01-09_2301.md  2026-01-09_2301_new_feed_marker_help.md  2026-01-09_2301_vim_keybindings.md  2026-01-09_vim_keybindings.md  2026-01-10_1945.md  2026-01-10_2123.md  2026-01-10_2133.md  2026-01-10_2145.md  2026-01-11_1318.md  2026-01-11_1328.txt  2026-01-11_1334.txt  2026-01-11_1338.txt  2026-01-14_1451.md  2026-01-15_1139.md  2026-01-30_1200.md
llm_context/: recent_newfeeds_response.json
src/: lib.rs  main.rs
tests/: decoder_seek_panic.rs  reasons.rs  test_search.rs
