[package]
name = "pimonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# Use rustls to avoid system OpenSSL dependency on Windows
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ratatui = "0.28"
crossterm = "0.28"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
xml = "0.8"
rodio = { version = "0.17", features = ["symphonia-all"] }
tempfile = "3"
rustfft = "6"
symphonia = { version = "0.5", features = ["all"] }
once_cell = "1"
